--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nivo/calendar": "^0.72.0",
+    "@nivo/core": "^0.72.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,6 +12,7 @@
     "dexie-react-hooks": "^1.0.6",
     "jszip": "^3.6.0",
     "object-hash": "^2.2.0",
+    "rainbowvis.js": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
