refactor and more documentation

--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "dexie-react-hooks": "^1.0.6",
     "jszip": "^3.6.0",
     "object-hash": "^2.2.0",
+    "prop-types": "^15.7.2",
     "rainbowvis.js": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-google-login": "^5.2.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -49,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-styleguidist": "^11.1.7"
   }
 }
