--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "dexie": "^3.1.0-beta.13",
-    "dexie-react-hooks": "^1.0.6",
+    "dataframe-js": "^1.4.4",
+    "dexie": "^3.2.0",
+    "dexie-react-hooks": "^1.1.1",
     "jszip": "^3.6.0",
     "object-hash": "^2.2.0",
     "prop-types": "^15.7.2",
@@ -19,6 +20,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-vega": "^7.4.4",
     "react-wordcloud": "^1.2.7",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
