--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "digitalfootprints",
+  "homepage": "http://ccs-amsterdam.github.io/digitalfootprints",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -30,6 +31,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -53,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "react-styleguidist": "^11.1.7"
   }
 }
