fixed firefox issues and added wordcloud

--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "dataframe-js": "^1.4.4",
     "dexie": "^3.2.0",
-    "dexie-react-hooks": "^1.1.1",
+    "fake-indexeddb": "^3.1.7",
     "jszip": "^3.6.0",
     "object-hash": "^2.2.0",
     "prop-types": "^15.7.2",
