--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "rainbowvis.js": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^8.0.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
