--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "data-donation-importers": "^0.1.7",
     "dexie": "^3.2.0",
     "fake-indexeddb": "^3.1.7",
     "jszip": "^3.6.0",
@@ -24,6 +25,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
+    "react-textarea-autosize": "^8.3.3",
     "react-vega": "^7.4.4",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
