--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-markdown": "^8.0.0",
     "react-redux": "^7.2.4",
+    "react-resizable": "^3.0.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "react-vega": "^7.4.4",
