--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "data-donation-importers": "^0.1.7",
     "dexie": "^3.2.0",
     "fake-indexeddb": "^3.1.7",
+    "i18next": "^21.6.14",
+    "i18next-browser-languagedetector": "^6.1.3",
     "jszip": "^3.6.0",
     "object-hash": "^2.2.0",
     "prop-types": "^15.7.2",
     "rainbowvis.js": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.7",
     "react-markdown": "^8.0.0",
     "react-redux": "^7.2.4",
     "react-resizable": "^3.0.4",
