--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
+    "@semantic-ui-react/component-ref": "^1.0.0",
     "@semantic-ui-react/css-patch": "^1.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^12.1.2",
