--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fake-indexeddb": "^3.1.7",
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.3",
+    "i18next-http-backend": "^1.4.0",
     "jszip": "^3.6.0",
     "object-hash": "^2.2.0",
     "prop-types": "^15.7.2",
@@ -44,7 +45,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postinstall": "semantic-ui-css-patch"
+    "postinstall": "semantic-ui-css-patch",
+    "extract": "i18next --config i18next-parser.config.js"
   },
   "eslintConfig": {
     "extends": [
@@ -65,6 +67,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "i18next-parser": "^6.0.0"
   }
 }
