--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "data-donation-importers": "^0.1.11",
+    "data-donation-importers": "^0.1.13",
     "dexie": "^3.2.0",
     "fake-indexeddb": "^3.1.7",
     "i18next": "^21.6.14",
@@ -34,6 +34,8 @@
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
+    "vega": "^5.22.1",
+    "vega-lite": "^5.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
