--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "data-donation-importers": "^0.1.13",
+    "data-donation-importers": "^0.1.14",
     "dexie": "^3.2.0",
     "fake-indexeddb": "^3.1.7",
     "i18next": "^21.6.14",
@@ -68,8 +68,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.16.7",
-    "@babel/core": "^7.17.9",
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.5",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.34",
     "@types/randomcolor": "^0.5.6",
@@ -78,6 +78,7 @@
     "@types/semantic-ui": "^2.2.7",
     "@types/styled-components": "^5.1.25",
     "babel-jest": "^28.0.2",
+    "core-js": "^3.26.1",
     "eslint": "^8.19.0",
     "gh-pages": "^3.2.3",
     "i18next-parser": "^6.0.0",
