--- a/package.json
+++ b/package.json
@@ -7,14 +7,10 @@
   },
   "private": true,
   "dependencies": {
-    "@semantic-ui-react/component-ref": "^1.0.0",
-    "@semantic-ui-react/css-patch": "^1.0.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
     "data-donation-importers": "^0.1.11",
     "dexie": "^3.2.0",
     "fake-indexeddb": "^3.1.7",
+    "fomantic-ui-css": "^2.9.3",
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.4.0",
@@ -33,8 +29,7 @@
     "react-vega": "^7.4.4",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.3",
+    "semantic-ui-react": "^2.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
