--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "DigitalFootprintsLab",
-  "homepage": "https://ccs-amsterdam.github.io/DigitalFootprintsLab",
+  "homepage": "https://digitalfootprintslab.pages.dev",
   "repository": {
     "type": "git",
     "url": "https://github.com/ccs-amsterdam/DigitalFootprintsLab"
